<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Local Go</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="signup_login">Already have an account?</string>
    <string name="login_signup">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_sign_in">Welcome! Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="others">Others</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">Loading...</string>
    <string name="hello">Hello,</string>
    <string name="search">Search</string>
    <string name="view_post">View Post</string>
    <string name="post">Post</string>
    <string name="favorite">Favorite</string>
    <string name="news">News</string>
    <string name="dummy_news">This is 300CEM Assignment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update</string>
    <string name="cancel">Cancel</string>
    <string name="photo_uploading">Photo Uploading...</string>
    <string name="profile_success_updated">Profile Successfully Updated</string>
    <string name="fail_update_photo">Fail Update Photo!</string>
    <string name="not_found_photo">Not Found Photo!</string>
    <string name="select_location">Select Location</string>
    <string name="location_name">Location Name</string>
    <string name="description">Description</string>
    <string name="new_post">New Post</string>
    <string name="view_posts">View Posts</string>
    <string name="write_comment">Write a Comment</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="delect_comment">Are you sure to delete comment?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="empty_comment">You cannot post empty comment</string>
    <string name="comment_deleted">Comment Deleted</string>
    <string name="registered_success">Registered Successfully</string>
    <string name="fail_register">Failed to register! Try again!</string>
    <string name="fail_login">Failed to Login! Please check your  account</string>
    <string name="email_require">Email is required!</string>
    <string name="password_require">Password is required!</string>
    <string name="valid_email">Please provide valid email!</string>
    <string name="password_length">Min password length should be 6 characters!</string>
    <string name="username_require">Username is required!</string>
    <string name="repeat_passwor_require">Repeat Password is required!</string>
    <string name="password_match">The passwords didn\'t match. Try again.</string>
    <string name="likes_txt">Likes:</string>
    <string name="sender_txt">Sender:</string>
    <string name="post_location_google_map">Post Location - Google Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_posts">My Posts</string>
    <string name="select_language">Select Language</string>
</resources>