<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_header"
        android:background="@drawable/profile_head_background"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_image"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle_border">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/image_profile"
                android:layout_margin="9dp"
                android:padding="3dp"
                android:background="@drawable/circle"
                android:src="@mipmap/ic_launcher"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_txt"
            android:layout_below="@+id/layout_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/username"
            android:textSize="35dp"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_info"
        android:layout_below="@id/layout_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/profile_txt"
            android:text="@string/profile"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/profile_txt">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_email"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:fontFamily="sans-serif-light"
                    android:background="@null"
                    android:textSize="23sp"
                    android:enabled="false"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:background="@null"
                    android:fontFamily="sans-serif-light"
                    android:textSize="23sp"
                    android:enabled="false"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:layout_below="@+id/layout_info"
        android:background="@drawable/background_button"
        android:text="@string/edit_profile"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        android:gravity="center"
        android:layout_below="@+id/layout_info">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/background_cancel_button"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/update_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/background_button"
            android:text="@string/update_profile"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>