<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backpage"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/inputUsername"
                android:layout_marginTop="50dp"
                android:background="@drawable/background_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_person"
                    app:tint="@color/colorAccent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/username"
                    android:background="@null"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/inputUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputUsername"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/inputEmail"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email"
                    app:tint="@color/colorAccent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/email"
                    android:background="@null"
                    android:hint="@string/login_email"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/login_email"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/inputEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputEmail"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/inputPassword"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_password"
                    app:tint="@color/colorAccent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/password"
                    android:background="@null"
                    android:hint="@string/login_password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/login_password"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/inputPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputPassword"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/inputPassword_confirm"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_password"
                    app:tint="@color/colorAccent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:id="@+id/password_confirm"
                    android:background="@null"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/confirm_password"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/inputPassword_confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputPassword_confirm"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/register_btn"
            android:layout_margin="30dp"
            android:background="@drawable/background_button"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_login"
                android:textColor="@color/colorTextSecondary"
                android:textSize="17dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_txt"
                android:text="@string/login"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>